--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "handlebars": "^4.7.7",
     "@fastify/formbody": "^7.4.0",
     "@fastify/static": "^6.9.0",
-    "@fastify/view": "^7.4.1"
+    "@fastify/view": "^7.4.1",
+    "axios": "^1.3.5"
   },
   "engines": {
     "node": "14.x"
