--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@fastify/formbody": "^7.4.0",
     "@fastify/static": "^6.9.0",
     "@fastify/view": "^7.4.1",
-    "axios": "^1.3.5"
+    "axios": "^1.3.5",
+    "form-data": "^4.0.0"
   },
   "engines": {
     "node": "14.x"
